@@ -71,6 +71,7 @@ tested browsers:
 - Internet Explorer 6.x, 7.x
 - Safari 3.x
 - Opera 9.25+ (has issues with P4A_DB_Navigator drag&drop)
+- Google Chrome
 
 -----------------------------------------
 -- P4A compatibility: Database engines --
