@@ -49,7 +49,6 @@ class P4A_Fieldset extends P4A_Frame
 			return "<div id='$id' class='hidden'></div>";
 		}
 
-		$p4a = P4A::singleton();
 		$properties = $this->composeStringProperties();
 		$actions = $this->composeStringActions();
 		$class = $this->composeStringClass();
@@ -58,43 +57,7 @@ class P4A_Fieldset extends P4A_Frame
 		if ($this->getLabel()) {
 			$string  .= "<legend>" . __($this->getLabel()) . "</legend>";
 		}
-		foreach($this->_map as $i=>$row){
-			$row_html = "\n<div class='row'>";
-			$one_visible = false;
-
-			foreach ($row as $j=>$obj) {
-				$object =& $p4a->getObject($obj["id"]);
-				if (is_object($object)) {
-					$as_string = $object->getAsString();
-				} else {
-					unset($p4a->objects[$obj["id"]]);
-					unset($this->_map[$i][$j]);
-					if (empty($this->_map[$i])) unset($this->_map[$i]);
-					$as_string = '';
-				}
-
-				if (strlen($as_string)>0) {
-					$one_visible = true;
-					$float = $obj["float"];
-					if ($obj["float"] != "none") {
-						$margin = "margin-" . $obj["float"];
-					} else {
-						$margin = "margin";
-					}
-					$margin_value = $obj["margin"];
-					$display = $object->isVisible() ? 'block' : 'none';
-					$row_html .= "\n\t<div style='padding:2px 0px;display:$display;float:$float;$margin:$margin_value'>";
-					$row_html .= "\n\t\t$as_string";
-					$row_html .= "\n\t</div>";
-				}
-			}
-
-			$row_html .= "\n</div>\n";
-
-			if ($one_visible) {
-				$string .= $row_html;
-			}
-		}
+		$string .= parent::getChildrenAsString();
 		$string .= "<div class='br'></div>";
 		$string .= "</fieldset>\n\n";
 		return $string;
